--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,26 +1,30 @@
 
 <ion-content [fullscreen]="true">
-  <div>
-    <ion-title>Welcome Back</ion-title>
-    <p>Sign in to access your account</p>
+  <div class="header">
+    <ion-title class="title">Welcome Back</ion-title>
+    <p class="subTitle">Sign in to access your account</p>
   </div>
 
   <form>
     <div class="ion-padding">
       <ion-item>
-        <ion-input></ion-input>
+        <ion-input placeholder="username" class="input"></ion-input>
         <ion-icon name="person-outline"></ion-icon>
       </ion-item>
       <ion-item>
-        <ion-input></ion-input>
+        <ion-input placeholder="password" class="input"></ion-input>
         <ion-icon name="lock-closed-outline"></ion-icon>
       </ion-item>
+
+      <div class="forgotpassword">
+        <a [routerLink]="['/reset-password']"> Forgot password? </a>
+      </div>
       <div>
-        <a [routerLink]="['reset-password']"> Forgot password? </a>
+        <p> New member?<a [routerLink]="['/signup']">Signup now</a></p>
       </div>
     </div>
     <ion-fab vertical="bottom" horizontal="end" style="margin-bottom:30px">
-      <ion-fab-button [routerLink]="['folder/id']">
+      <ion-fab-button [routerLink]="['home']">
         <ion-icon name="chevron-forward"></ion-icon>
       </ion-fab-button>
     </ion-fab>
